# OptiLib

./: CMakeLists.txt  LICENSE  README.md
examples/: ex1.cpp
include/: Bounds.h  Design.h  DesignSet.h  Element.h  ElementSet.h  Model.h  ObjId.h  Solution.h  UUIDHandler.h  Value.h  ValueFactory.h
src/: Bounds.cpp  Design.cpp  DesignSet.cpp  Element.cpp  Model.cpp  ObjId.cpp  UUIDHandler.cpp  Value.cpp
